--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 		      
 		      <% if user_signed_in? %>
 		      <li><a href="#"><%= current_user.name %></a></li>
+		      <li><%= link_to 'Details' ,students_path %></li>
 			  <li><%= link_to 'Log Out', destroy_user_session_path, :method => 'delete', :confirm => 'Are you sure?' %></li>
 			<% else %>
 			  <li><%= link_to 'Log In', new_user_session_path %></li>
