--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,24 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Company -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @company.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @company.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
+  <dd><%= @company.address %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:contact_person) %>:</strong></dt>
+  <dd><%= @company.contact_person %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:contact_addr) %>:</strong></dt>
+  <dd><%= @company.contact_addr %></dd>
+</dl>
 
-<p>
-  <strong>Address:</strong>
-  <%= @company.address %>
-</p>
-
-<p>
-  <strong>Contact person:</strong>
-  <%= @company.contact_person %>
-</p>
-
-<p>
-  <strong>Contact addr:</strong>
-  <%= @company.contact_addr %>
-</p>
-
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              companies_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_company_path(@company), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              company_path(@company),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
