--- a/app/views/companyvisits/index.html.erb
+++ b/app/views/companyvisits/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Company -%>
+<%- model_class = Companyvisit -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -6,28 +6,26 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:address) %></th>
-      <th><%= model_class.human_attribute_name(:contact_person) %></th>
-      <th><%= model_class.human_attribute_name(:contact_addr) %></th>
+      <th><%= model_class.human_attribute_name(:company_id) %></th>
+      <th><%= model_class.human_attribute_name(:on) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @companies.each do |company| %>
+    <% @companyvisits.each do |companyvisit| %>
       <tr>
-        <td><%= link_to company.id, company_path(company) %></td>
-        <td><%= company.name %></td>
-        <td><%= company.address %></td>
-        <td><%= company.contact_person %></td>
-        <td><%= company.contact_addr %></td>
-        <td><%=l company.created_at %></td>
+        <td><%= link_to companyvisit.id, companyvisit_path(companyvisit) %></td>
+        <td><%= companyvisit.company_id %></td>
+        <td><%= companyvisit.on %></td>
+        <td><%= companyvisit.description %></td>
+        <td><%=l companyvisit.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_company_path(company), :class => 'btn btn-mini' %>
+                      edit_companyvisit_path(companyvisit), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      company_path(company),
+                      companyvisit_path(companyvisit),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -38,5 +36,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_company_path,
+            new_companyvisit_path,
             :class => 'btn btn-primary' %>
