--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,26 +20,32 @@
 
 				    <% if current_user.role? :superadmin %>
 					  <li><%= link_to 'List' , '/list' %></li>
-					  <li><%= link_to 'Export' , '/export' %></li>
+					  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :po %>
 					  <li><%= link_to 'List' , '/list' %></li>
-					  <li><%= link_to 'Export' , '/export' %></li>
+					  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :placement %>
 					  <li><%= link_to 'List' , '/list' %></li>
-					  <li><%= link_to 'Export' , '/export' %></li>
+					  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :training %>
 					  <li><%= link_to 'List' , '/list' %></li>
-					  <li><%= link_to 'Export' , '/export' %></li>
+					  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
+					<% end %>
+
+					<% if current_user.role? :advisor %>
+					  <li><%= link_to 'List' , '/list' %></li>
+					  
+					  <li><%= link_to 'Advisor' , '/advisor' %></li>
 					<% end %>
 
 					<% if current_user.role? :student %>
@@ -48,7 +54,7 @@
 
 					<% if current_user.role? :classrep %>
 					  <li><%= link_to 'List' , '/list' %></li>
-					  <li><%= link_to 'Export' , '/export' %></li>
+					  
 					  <li><%= link_to 'Classrep' , '/classrep' %></li>
 					<% end %>
 
