--- a/app/views/list/export.xls.erb
+++ b/app/views/list/export.xls.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:course) %></th>
       <th><%= model_class.human_attribute_name(:dept) %></th>
@@ -84,8 +84,8 @@
   <tbody>
     <% @students.each do |student| %>
       <tr>
-        <td><%= link_to student.id, student_path(student) %></td>
-        <td><%= student.user_id %></td>
+        <td><%= student.id %></td>
+       
         <td><%= student.name %></td>
         <td><%= student.course %></td>
         <td><%= student.dept %></td>
