--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,159 +3,6 @@
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @student.user_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @student.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:course) %>:</strong></dt>
-  <dd><%= @student.course %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:dept) %>:</strong></dt>
-  <dd><%= @student.dept %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:batch) %>:</strong></dt>
-  <dd><%= @student.batch %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:gender) %>:</strong></dt>
-  <dd><%= @student.gender %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:dob) %>:</strong></dt>
-  <dd><%= @student.dob %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:fname) %>:</strong></dt>
-  <dd><%= @student.fname %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:mname) %>:</strong></dt>
-  <dd><%= @student.mname %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:fjob) %>:</strong></dt>
-  <dd><%= @student.fjob %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:mjob) %>:</strong></dt>
-  <dd><%= @student.mjob %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:paddr) %>:</strong></dt>
-  <dd><%= @student.paddr %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:taddr) %>:</strong></dt>
-  <dd><%= @student.taddr %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:height) %>:</strong></dt>
-  <dd><%= @student.height %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:weight) %>:</strong></dt>
-  <dd><%= @student.weight %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:eye) %>:</strong></dt>
-  <dd><%= @student.eye %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:mobile) %>:</strong></dt>
-  <dd><%= @student.mobile %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:resiph) %>:</strong></dt>
-  <dd><%= @student.resiph %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:emerph) %>:</strong></dt>
-  <dd><%= @student.emerph %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
-  <dd><%= @student.email %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:regreceipt) %>:</strong></dt>
-  <dd><%= @student.regreceipt %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:erank) %>:</strong></dt>
-  <dd><%= @student.erank %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ssc_board) %>:</strong></dt>
-  <dd><%= @student.ssc_board %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ssc_yop) %>:</strong></dt>
-  <dd><%= @student.ssc_yop %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ssc_aggr) %>:</strong></dt>
-  <dd><%= @student.ssc_aggr %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:hsc_board) %>:</strong></dt>
-  <dd><%= @student.hsc_board %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:hsc_yop) %>:</strong></dt>
-  <dd><%= @student.hsc_yop %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:hsc_aggr) %>:</strong></dt>
-  <dd><%= @student.hsc_aggr %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:d_trade) %>:</strong></dt>
-  <dd><%= @student.d_trade %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:d_yop) %>:</strong></dt>
-  <dd><%= @student.d_yop %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:d_board) %>:</strong></dt>
-  <dd><%= @student.d_board %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:d_aggr) %>:</strong></dt>
-  <dd><%= @student.d_aggr %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug12) %>:</strong></dt>
-  <dd><%= @student.ug12 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug3) %>:</strong></dt>
-  <dd><%= @student.ug3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug4) %>:</strong></dt>
-  <dd><%= @student.ug4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug5) %>:</strong></dt>
-  <dd><%= @student.ug5 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug6) %>:</strong></dt>
-  <dd><%= @student.ug6 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug7) %>:</strong></dt>
-  <dd><%= @student.ug7 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug8) %>:</strong></dt>
-  <dd><%= @student.ug8 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug9) %>:</strong></dt>
-  <dd><%= @student.ug9 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug10) %>:</strong></dt>
-  <dd><%= @student.ug10 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_cgpa) %>:</strong></dt>
-  <dd><%= @student.ug_cgpa %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist12) %>:</strong></dt>
-  <dd><%= @student.ug_hist12 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist3) %>:</strong></dt>
-  <dd><%= @student.ug_hist3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist4) %>:</strong></dt>
-  <dd><%= @student.ug_hist4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist5) %>:</strong></dt>
-  <dd><%= @student.ug_hist5 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist6) %>:</strong></dt>
-  <dd><%= @student.ug_hist6 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist7) %>:</strong></dt>
-  <dd><%= @student.ug_hist7 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist8) %>:</strong></dt>
-  <dd><%= @student.ug_hist8 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_hist_total) %>:</strong></dt>
-  <dd><%= @student.ug_hist_total %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog12) %>:</strong></dt>
-  <dd><%= @student.ug_backlog12 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog3) %>:</strong></dt>
-  <dd><%= @student.ug_backlog3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog4) %>:</strong></dt>
-  <dd><%= @student.ug_backlog4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog5) %>:</strong></dt>
-  <dd><%= @student.ug_backlog5 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog6) %>:</strong></dt>
-  <dd><%= @student.ug_backlog6 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog7) %>:</strong></dt>
-  <dd><%= @student.ug_backlog7 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_backlog8) %>:</strong></dt>
-  <dd><%= @student.ug_backlog8 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:ug_b_pending) %>:</strong></dt>
-  <dd><%= @student.ug_b_pending %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg1) %>:</strong></dt>
-  <dd><%= @student.pg1 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg2) %>:</strong></dt>
-  <dd><%= @student.pg2 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg3) %>:</strong></dt>
-  <dd><%= @student.pg3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg4) %>:</strong></dt>
-  <dd><%= @student.pg4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_cgpu) %>:</strong></dt>
-  <dd><%= @student.pg_cgpu %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_hist1) %>:</strong></dt>
-  <dd><%= @student.pg_hist1 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_hist2) %>:</strong></dt>
-  <dd><%= @student.pg_hist2 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_hist3) %>:</strong></dt>
-  <dd><%= @student.pg_hist3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_hist4) %>:</strong></dt>
-  <dd><%= @student.pg_hist4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_hist_total) %>:</strong></dt>
-  <dd><%= @student.pg_hist_total %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_backlog1) %>:</strong></dt>
-  <dd><%= @student.pg_backlog1 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_backlog2) %>:</strong></dt>
-  <dd><%= @student.pg_backlog2 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_backlog3) %>:</strong></dt>
-  <dd><%= @student.pg_backlog3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_backlog4) %>:</strong></dt>
-  <dd><%= @student.pg_backlog4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:pg_backlog_pending) %>:</strong></dt>
-  <dd><%= @student.pg_backlog_pending %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:gap) %>:</strong></dt>
-  <dd><%= @student.gap %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:verify_status) %>:</strong></dt>
-  <dd><%= @student.verify_status %></dd>
-</dl>
-
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               students_path, :class => 'btn'  %>
@@ -167,3 +14,82 @@
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
+
+<table class ="table table-striped">
+   <tr><td><strong><%= model_class.human_attribute_name(:name) %>:</strong></td><td><%= @student.name %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:course) %>:</strong></td><td><%= @student.course %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:dept) %>:</strong></td><td><%= @student.dept %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:batch) %>:</strong></td><td><%= @student.batch %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:gender) %>:</strong></td><td><%= @student.gender %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:dob) %>:</strong></td><td><%= @student.dob %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:fname) %>:</strong></td><td><%= @student.fname %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:mname) %>:</strong></td><td><%= @student.mname %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:fjob) %>:</strong></td><td><%= @student.fjob %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:mjob) %>:</strong></td><td><%= @student.mjob %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:paddr) %>:</strong></td><td><%= @student.paddr %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:taddr) %>:</strong></td><td><%= @student.taddr %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:height) %>:</strong></td><td><%= @student.height %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:weight) %>:</strong></td><td><%= @student.weight %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:eye) %>:</strong></td><td><%= @student.eye %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:mobile) %>:</strong></td><td><%= @student.mobile %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:resiph) %>:</strong></td><td><%= @student.resiph %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:emerph) %>:</strong></td><td><%= @student.emerph %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:email) %>:</strong></td><td><%= @student.email %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:regreceipt) %>:</strong></td><td><%= @student.regreceipt %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:erank) %>:</strong></td><td><%= @student.erank %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ssc_board) %>:</strong></td><td><%= @student.ssc_board %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ssc_yop) %>:</strong></td><td><%= @student.ssc_yop %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ssc_aggr) %>:</strong></td><td><%= @student.ssc_aggr %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:hsc_board) %>:</strong></td><td><%= @student.hsc_board %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:hsc_aggr) %>:</strong></td><td><%= @student.hsc_aggr %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:d_trade) %>:</strong></td><td><%= @student.d_trade %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:d_yop) %></strong></td><td><%= @student.d_yop %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:d_board) %></strong></td><td><%= @student.d_board %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:d_aggr) %></strong></td><td><%= @student.d_aggr %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug12) %></strong></td><td><%= @student.ug12 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug3) %></strong></td><td><%= @student.ug3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug4) %></strong></td><td><%= @student.ug4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug5) %></strong></td><td><%= @student.ug5 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug6) %></strong></td><td><%= @student.ug6 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug7) %></strong></td><td><%= @student.ug7 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug8) %></strong></td><td><%= @student.ug8 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug9) %></strong></td><td><%= @student.ug9 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug10) %></strong></td><td><%= @student.ug10 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_cgpa) %></strong></td><td><%= @student.ug_cgpa %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist12) %></strong></td><td><%= @student.ug_hist12 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist3) %></strong></td><td><%= @student.ug_hist3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist4) %></strong></td><td><%= @student.ug_hist4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist5) %></strong></td><td><%= @student.ug_hist5 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist6) %></strong></td><td><%= @student.ug_hist6 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist7) %></strong></td><td><%= @student.ug_hist7 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist8) %></strong></td><td><%= @student.ug_hist8 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist_total) %></strong></td><td><%= @student.ug_hist_total %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog12) %></strong></td><td><%= @student.ug_backlog12 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog3) %></strong></td><td><%= @student.ug_backlog3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog4) %></strong></td><td><%= @student.ug_backlog4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog5) %></strong></td><td><%= @student.ug_backlog5 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog6) %></strong></td><td><%= @student.ug_backlog6 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog7) %></strong></td><td><%= @student.ug_backlog7 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog8) %></strong></td><td><%= @student.ug_backlog8 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:ug_b_pending) %></strong></td><td><%= @student.ug_b_pending %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg1) %></strong></td><td><%= @student.pg1 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg2) %></strong></td><td><%= @student.pg2 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg3) %></strong></td><td><%= @student.pg3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg4) %></strong></td><td><%= @student.pg4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_cgpu) %></strong></td><td><%= @student.pg_cgpu %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist1) %></strong></td><td><%= @student.pg_hist1 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist2) %></strong></td><td><%= @student.pg_hist2 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist3) %></strong></td><td><%= @student.pg_hist3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist4) %></strong></td><td><%= @student.pg_hist4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist_total) %></strong></td><td><%= @student.pg_hist_total %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog1) %></strong></td><td><%= @student.pg_backlog1 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog2) %></strong></td><td><%= @student.pg_backlog2 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog3) %></strong></td><td><%= @student.pg_backlog3 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog4) %></strong></td><td><%= @student.pg_backlog4 %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog_pending) %></strong></td><td><%= @student.pg_backlog_pending %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:gap) %></strong></td><td><%= @student.gap %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:adv_approved) %></strong></td><td><%= @student.adv_approved %></td></tr>
+   <tr><td><strong><%= model_class.human_attribute_name(:created_at) %></strong></td><td><%= @student.created_at %></td></tr>
+
+
+</table>
