--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -14,82 +14,152 @@
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
-
+<div id="step">
+<fieldset title="Basic Info">
+  <legend></legend>
 <table class ="table table-striped">
-   <tr><td><strong><%= model_class.human_attribute_name(:name) %>:</strong></td><td><%= @student.name %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:course) %>:</strong></td><td><%= @student.course %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:dept) %>:</strong></td><td><%= @student.dept %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:batch) %>:</strong></td><td><%= @student.batch %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:gender) %>:</strong></td><td><%= @student.gender %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:dob) %>:</strong></td><td><%= @student.dob %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:fname) %>:</strong></td><td><%= @student.fname %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:mname) %>:</strong></td><td><%= @student.mname %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:fjob) %>:</strong></td><td><%= @student.fjob %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:mjob) %>:</strong></td><td><%= @student.mjob %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:paddr) %>:</strong></td><td><%= @student.paddr %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:taddr) %>:</strong></td><td><%= @student.taddr %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:height) %>:</strong></td><td><%= @student.height %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:weight) %>:</strong></td><td><%= @student.weight %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:eye) %>:</strong></td><td><%= @student.eye %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:mobile) %>:</strong></td><td><%= @student.mobile %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:resiph) %>:</strong></td><td><%= @student.resiph %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:emerph) %>:</strong></td><td><%= @student.emerph %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:email) %>:</strong></td><td><%= @student.email %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:regreceipt) %>:</strong></td><td><%= @student.regreceipt %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:erank) %>:</strong></td><td><%= @student.erank %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ssc_board) %>:</strong></td><td><%= @student.ssc_board %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ssc_yop) %>:</strong></td><td><%= @student.ssc_yop %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ssc_aggr) %>:</strong></td><td><%= @student.ssc_aggr %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:hsc_board) %>:</strong></td><td><%= @student.hsc_board %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:hsc_aggr) %>:</strong></td><td><%= @student.hsc_aggr %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:d_trade) %>:</strong></td><td><%= @student.d_trade %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:d_yop) %></strong></td><td><%= @student.d_yop %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:d_board) %></strong></td><td><%= @student.d_board %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:d_aggr) %></strong></td><td><%= @student.d_aggr %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug12) %></strong></td><td><%= @student.ug12 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug3) %></strong></td><td><%= @student.ug3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug4) %></strong></td><td><%= @student.ug4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug5) %></strong></td><td><%= @student.ug5 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug6) %></strong></td><td><%= @student.ug6 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug7) %></strong></td><td><%= @student.ug7 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug8) %></strong></td><td><%= @student.ug8 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug9) %></strong></td><td><%= @student.ug9 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug10) %></strong></td><td><%= @student.ug10 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_cgpa) %></strong></td><td><%= @student.ug_cgpa %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist12) %></strong></td><td><%= @student.ug_hist12 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist3) %></strong></td><td><%= @student.ug_hist3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist4) %></strong></td><td><%= @student.ug_hist4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist5) %></strong></td><td><%= @student.ug_hist5 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist6) %></strong></td><td><%= @student.ug_hist6 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist7) %></strong></td><td><%= @student.ug_hist7 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist8) %></strong></td><td><%= @student.ug_hist8 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_hist_total) %></strong></td><td><%= @student.ug_hist_total %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog12) %></strong></td><td><%= @student.ug_backlog12 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog3) %></strong></td><td><%= @student.ug_backlog3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog4) %></strong></td><td><%= @student.ug_backlog4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog5) %></strong></td><td><%= @student.ug_backlog5 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog6) %></strong></td><td><%= @student.ug_backlog6 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog7) %></strong></td><td><%= @student.ug_backlog7 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_backlog8) %></strong></td><td><%= @student.ug_backlog8 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:ug_b_pending) %></strong></td><td><%= @student.ug_b_pending %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg1) %></strong></td><td><%= @student.pg1 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg2) %></strong></td><td><%= @student.pg2 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg3) %></strong></td><td><%= @student.pg3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg4) %></strong></td><td><%= @student.pg4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_cgpu) %></strong></td><td><%= @student.pg_cgpu %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist1) %></strong></td><td><%= @student.pg_hist1 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist2) %></strong></td><td><%= @student.pg_hist2 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist3) %></strong></td><td><%= @student.pg_hist3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist4) %></strong></td><td><%= @student.pg_hist4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_hist_total) %></strong></td><td><%= @student.pg_hist_total %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog1) %></strong></td><td><%= @student.pg_backlog1 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog2) %></strong></td><td><%= @student.pg_backlog2 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog3) %></strong></td><td><%= @student.pg_backlog3 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog4) %></strong></td><td><%= @student.pg_backlog4 %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:pg_backlog_pending) %></strong></td><td><%= @student.pg_backlog_pending %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:gap) %></strong></td><td><%= @student.gap %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:adv_approved) %></strong></td><td><%= @student.adv_approved %></td></tr>
-   <tr><td><strong><%= model_class.human_attribute_name(:created_at) %></strong></td><td><%= @student.created_at %></td></tr>
+   <tr><td><strong>Name:</strong></td><td><%= @student.name %></td></tr>
+   <tr><td><strong>Course:</strong></td><td><%= @student.course %></td></tr>
+   <tr><td><strong>Department:</strong></td><td><%= @student.dept %></td></tr>
+   <tr><td><strong>Batch:</strong></td><td><%= @student.batch %></td></tr>
+   <tr><td><strong>Gender:</strong></td><td><%= @student.gender %></td></tr>
+   <tr><td><strong>Date of Birth:</strong></td><td><%= @student.dob %></td></tr>
+   <tr><td><strong>Email:</strong></td><td><%= @student.email %></td></tr>
+   <tr><td><strong>Picture:</strong></td><td><%= image_tag(@student.picture_url) if @student.picture? %></td></tr>
+   <tr><td><strong>Resume:</strong></td><td><%= link_to "download" , @student.resume_url %></td></tr>
+</table>
+</fieldset>
 
+<fieldset title="Additional Info">
+  <legend></legend>
+<table class ="table table-striped">
+   <tr><td><strong>Father's Name:</strong></td><td><%= @student.fname %></td></tr>
+   <tr><td><strong>Mothers's Name:</strong></td><td><%= @student.mname %></td></tr>
+   <tr><td><strong>Father's Job:</strong></td><td><%= @student.fjob %></td></tr>
+   <tr><td><strong>Mother's Job:</strong></td><td><%= @student.mjob %></td></tr>
+   <tr><td><strong>Permenant Address:</strong></td><td><%= @student.paddr %></td></tr>
+   <tr><td><strong>Temporary Addrres:</strong></td><td><%= @student.taddr %></td></tr>
+   <tr><td><strong>Height:</strong></td><td><%= @student.height %></td></tr>
+   <tr><td><strong>Weight:</strong></td><td><%= @student.weight %></td></tr>
+   <tr><td><strong>Eye power:</strong></td><td><%= @student.eye %></td></tr>
+</table>
+</fieldset>
+
+<fieldset title="Contact Info">
+  <legend></legend>
+<table class ="table table-striped">
+   <tr><td><strong>Mobile:</strong></td><td><%= @student.mobile %></td></tr>
+   <tr><td><strong>Residence:</strong></td><td><%= @student.resiph %></td></tr>
+   <tr><td><strong>Emergency Contact:</strong></td><td><%= @student.emerph %></td></tr>
+   
+</table>
+</fieldset>
+
+<fieldset title="School Details">
+  <legend></legend>
+<table class ="table table-striped">
+   
+   <tr><td>Class X Details</td><td></td></tr>
+   <tr><td><strong>Board:</strong></td><td><%= @student.ssc_board %></td></tr>
+   <tr><td><strong>Year of passing:</strong></td><td><%= @student.ssc_yop %></td></tr>
+   <tr><td><strong>Aggregate Percentage:</strong></td><td><%= @student.ssc_aggr %></td></tr>
+
+   <tr><td>Class XII Details</td><td></td></tr>
+   <tr><td><strong>Board:</strong></td><td><%= @student.hsc_board %></td></tr>
+    <tr><td><strong>Year of passing:</strong></td><td><%= @student.hsc_yop %></td></tr>
+   <tr><td><strong>Aggregate Percentage:</strong></td><td><%= @student.hsc_aggr %></td></tr>
+
+   <tr><td>Diploma Details</td><td></td></tr>
+   <tr><td><strong>Trade:</strong></td><td><%= @student.d_trade %></td></tr>
+   <tr><td><strong>Year of Passing</strong></td><td><%= @student.d_yop %></td></tr>
+   <tr><td><strong>Board</strong></td><td><%= @student.d_board %></td></tr>
+   <tr><td><strong>Aggregate Percentage</strong></td><td><%= @student.d_aggr %></td></tr>
+
+   <tr><td><strong>Entrance Rank:</strong></td><td><%= @student.erank %></td></tr>
 
 </table>
+</fieldset>
+
+
+<fieldset title="UG Details">
+  <legend></legend>
+<table class ="table table-striped">
+   <tr><td>GPA</td><td></td></tr>
+   <tr><td><strong>Sem I & II</strong></td><td><%= @student.ug12 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.ug3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.ug4 %></td></tr>
+   <tr><td><strong>Sem V</strong></td><td><%= @student.ug5 %></td></tr>
+   <tr><td><strong>Sem VI</strong></td><td><%= @student.ug6 %></td></tr>
+   <tr><td><strong>Sem VII</strong></td><td><%= @student.ug7 %></td></tr>
+   <tr><td><strong>Sem VIII</strong></td><td><%= @student.ug8 %></td></tr>
+   <tr><td><strong>CGPA</strong></td><td><%= @student.ug_cgpa %></td></tr>
+
+   <tr><td>Backlog History</td><td></td></tr>
+   <tr><td><strong>Sem I & II</strong></td><td><%= @student.ug_hist12 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.ug_hist3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.ug_hist4 %></td></tr>
+   <tr><td><strong>Sem V</strong></td><td><%= @student.ug_hist5 %></td></tr>
+   <tr><td><strong>Sem VI</strong></td><td><%= @student.ug_hist6 %></td></tr>
+   <tr><td><strong>Sem VII</strong></td><td><%= @student.ug_hist7 %></td></tr>
+   <tr><td><strong>Sem VIII</strong></td><td><%= @student.ug_hist8 %></td></tr>
+   <tr><td><strong>Total</strong></td><td><%= @student.ug_hist_total %></td></tr>
+
+   <tr><td>Backlog Pending</td><td></td></tr>
+   <tr><td><strong>Sem I & II</strong></td><td><%= @student.ug_backlog12 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.ug_backlog3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.ug_backlog4 %></td></tr>
+   <tr><td><strong>Sem V></strong></td><td><%= @student.ug_backlog5 %></td></tr>
+   <tr><td><strong>Sem VI</strong></td><td><%= @student.ug_backlog6 %></td></tr>
+   <tr><td><strong>Sem VII</strong></td><td><%= @student.ug_backlog7 %></td></tr>
+   <tr><td><strong>Sem VIII</strong></td><td><%= @student.ug_backlog8 %></td></tr>
+   <tr><td><strong>Total</strong></td><td><%= @student.ug_b_pending %></td></tr>
+</table>
+</fieldset>
+
+
+<fieldset title="PG Details">
+  <legend></legend>
+<table class ="table table-striped">
+   <tr><td>GPA</td><td></td></tr>
+   <tr><td><strong>Sem I</strong></td><td><%= @student.pg1 %></td></tr>
+   <tr><td><strong>Sem II</strong></td><td><%= @student.pg2 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.pg3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.pg4 %></td></tr>
+   <tr><td><strong>CGPA</strong></td><td><%= @student.pg_cgpu %></td></tr>
+
+   <tr><td>Backlog History</td><td></td></tr>
+   <tr><td><strong>Sem I</strong></td><td><%= @student.pg_hist1 %></td></tr>
+   <tr><td><strong>Sem II</strong></td><td><%= @student.pg_hist2 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.pg_hist3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.pg_hist4 %></td></tr>
+   <tr><td><strong>Total</strong></td><td><%= @student.pg_hist_total %></td></tr>
+
+   <tr><td>Backlog Pending</td><td></td></tr>
+   <tr><td><strong>Sem I</strong></td><td><%= @student.pg_backlog1 %></td></tr>
+   <tr><td><strong>Sem II</strong></td><td><%= @student.pg_backlog2 %></td></tr>
+   <tr><td><strong>Sem III</strong></td><td><%= @student.pg_backlog3 %></td></tr>
+   <tr><td><strong>Sem IV</strong></td><td><%= @student.pg_backlog4 %></td></tr>
+   <tr><td><strong>Total</strong></td><td><%= @student.pg_backlog_pending %></td></tr>
+</table>
+</fieldset>
+
+<fieldset title="Finally">
+  <legend></legend>
+<table class ="table table-striped">
+   <tr><td><strong>Education Gap</strong></td><td><%= @student.gap %></td></tr>
+
+   <tr><td><strong>Placement Cell Registration Receipt:</strong></td><td><%= @student.regreceipt %></td></tr>
+
+   <tr><td><strong>Advisor Approved:</strong></td><td><%= @student.adv_approved %></td></tr>
+   
+</table>
+</fieldset>
+
+
+</div>
+
+<br><br><br>
+
+
+
+ 
