--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
 					<% if current_user.role? :classrep %>
 					  <li><%= link_to 'List' , '/list' %></li>					  
 					  <li><%= link_to 'Classrep' , '/classrep' %></li>
+					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 
