--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -81,13 +81,13 @@
   <div class="control-group">
     <%= f.label "Permanent Address", :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :paddr, :class => 'text_field' %>
+      <%= f.text_area :paddr, cols: 40, rows: 10, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label "Temporary Address", :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :taddr, :class => 'text_field' %>
+      <%= f.text_area :taddr,cols: 40, rows: 10, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
