almost done in beta

--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -1,5 +1,5 @@
 
-<p>Please choose the corresponding batch and branch</p>
+<h3><p>Please choose the corresponding batch and branch</p></h3>
 <br>
 <div class = "container">
 <hr>
