--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class = "container">
+
 
 	<div class="navbar">
 		  <div class="navbar-inner">
@@ -17,6 +17,8 @@
 		      <li><a href="/">Home</a></li>     
 		      
 		      <% if user_signed_in? %>
+
+		             <li><%= link_to 'Placement Status' , '/status' %></li>
 
 				    <% if current_user.role? :superadmin %>
 					  <li><%= link_to 'List' , '/list' %></li>					  
@@ -49,7 +51,6 @@
 
 					<% if current_user.role? :classrep %>
 					  <li><%= link_to 'List' , '/list' %></li>					  
-					  <li><%= link_to 'Classrep' , '/classrep' %></li>
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
@@ -65,9 +66,9 @@
 		  </div>
 	</div>
 
-
+<div class = "container">
  		<p class="notice"><%= notice %></p>
-       	<p class="alert"><%= alert %></p>
+       	<p ><%= alert %></p>
 
 		<%= yield %>
 </div>
