--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,27 +21,32 @@
 		             <li><%= link_to 'Placement Status' , '/status' %></li>
 
 				    <% if current_user.role? :superadmin %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>
+					  <li><%= link_to 'Drive List' , '/list/attend' %></li>					  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :po %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>	
+					  <li><%= link_to 'Drive List' , '/list/attend' %></li>				  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :placement %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>	
+					  <li><%= link_to 'Drive List' , '/list/attend' %></li>				  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :training %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>	
+					  <li><%= link_to 'Drive List' , '/list/attend' %></li>				  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
 					<% end %>
 
 					<% if current_user.role? :advisor %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>	
+
 					  <li><%= link_to 'Advisor' , '/advisor' %></li>
 					<% end %>
 
@@ -50,8 +55,10 @@
 					<% end %>
 
 					<% if current_user.role? :classrep %>
-					  <li><%= link_to 'List' , '/list' %></li>					  
+					  <li><%= link_to 'List' , '/list' %></li>		
+					  <li><%= link_to 'Drive List' , '/list/attend' %></li>			  
 					  <li><%= link_to 'Admin' , '/superadmin' %></li>
+
 					<% end %>
 
 
